added un order list

--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -54,6 +54,16 @@
       <p>Land ownership: No</p>
       <p>Tenancy agreement until 2026: No</p>
       <p class=" govuk-!-font-size-24 govuk-!-padding-top-2">Project items needed:</p>
+      <p>Reservoir construction and infrastructure:</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+
       <p></p>
       <p></p>
       <p></p>
