aaded text email

--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -56,9 +56,9 @@
       <p class=" govuk-!-font-size-24 govuk-!-padding-top-2">Project items needed:</p>
       <p>Reservoir construction and infrastructure:</p>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Synthetic liner</li>
+        <li>Abstraction point including pump</li>
+        <li>Pipework to fill the reseroir</li>
         <li></li>
         <li></li>
       </ul>
