--- a/app/views/current/views/guidance/water.html
+++ b/app/views/current/views/guidance/water.html
@@ -36,26 +36,47 @@
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million.</p>
 
 <h2 id="when-to-apply">When to apply</h2>
-
-<p>You can check if you’re eligible and how well your project fits the funding priorities from 1 July 2021 to 31 August 2021.</p>
-<p>Full application  can be submitted from 1 September 2021 to 30 November 2021.</p>
-<p>Your project must be completed before you can claim the funding. All claims must be made before 21 March 2022.</p>
-<p>Any planning permission or abstraction licence must be in place to submit a full application.</p>
+<table class="govuk-table ">
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Grant stage</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Opens</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Closes</th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Check if you’re eligible</th>
+      <td class="govuk-table__cell govuk-!-padding-right-1">1 July 2021</td>
+      <td class="govuk-table__cell">31 August 2021</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Full application</th>
+      <td class="govuk-table__cell">1 September 2021</td>
+      <td class="govuk-table__cell">30 November 2021</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Project completed and claims made</th>
+      <td class="govuk-table__cell"></td>
+      <td class="govuk-table__cell">21 March 2022</td>
+    </tr>
+  </tbody>
+</table>
+<p>Any planning permission or abstraction licences must be in place to submit a full application.</p>
 <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
 <p>Before you start the project, you can:</p>
 
 <ul>
   <li>get quotes from suppliers</li>
-  <li>apply for planning permission or an abstraction licence(these can take a long time)</li>
+  <li>apply for planning permission or an abstraction licence (these can take a long time)</li>
 </ul>
 <p>
 </p>
 
 <h2 id="how-to-apply-for-a-grant">How to apply for a grant</h2>
 <h3>Check if your project can apply for a grant</h3>
-<p>You need to check if you’re eligible and how well your project fits the funding priorities.</p>
+<a href="../water/start" class="govuk-heading-s govuk-!-padding-top-5 govuk-!-padding-bottom-4">You need to check if you’re eligible and how well your project fits the funding priorities.</a>
 <p>You’ll need:</p>
-
 <ul>
   <li>information about your business (for example number of employees, turnover)</li>
   <li>information about the project (for example irrigated land in hectares)</li>
@@ -64,14 +85,17 @@
 </ul>
 
 <p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
-<p>You can go through the checker as many times as you like but you can only submit your details once.</p>
-<p>The RPA will be in touch once the application period opens.</p>
+<p>RPA wants to fund projects that: </p>
+<ul>
+  <li>improve productivity</li>
+  <li>improve the environment</li>
+  <li>improve water sustainability</li>
+</ul>
+<p>You can go back through the checker as many times as you like but you can only submit your details once.</p>
 
 <h3>Submit a full application</h3>
+<p>The RPA will be in touch once the application period opens.</p>
 <p>If you submit a full application and it is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
-
-<a href="../water/start" class="govuk-heading-s govuk-!-padding-top-7">Check if you can apply and how well your project fits the funding priorities.</a>
-
 </div>
 <br/>
 
