--- a/app/views/current/views/water/tenancy-length.html
+++ b/app/views/current/views/water/tenancy-length.html
@@ -20,7 +20,7 @@
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 5a of 18 </span>
               <h1 class="govuk-fieldset__heading">
-                Is the planned project on land with a tenancy agreement in place until 2026 or after?
+                Do you have a tenancy agreement until 2026 or after? 
               </h1>
             </legend>
             <br><br>
