--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -27,7 +27,7 @@ Meeting the remaining project costs
           </legend>
           <br>
           <div id="public-money-hint" class="govuk-hint">
-            You cannot use any grant funding from government or local authorities. You can use money from the Basic Payment Scheme or agri-environment schemes such as Countryside Stewardship Scheme.
+            You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme. 
           </div>
           <br>
           <div class="govuk-radios govuk-radios--inline">
