--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -58,7 +58,7 @@
                 </span>
               </summary>
               <div class="govuk-details__text">
-                Any planning permission required must be in place to submit a full application.
+                Any planning permission must be in place by 31 December 2021 (the end of the application window). 
               </div>
             </details>
           </fieldset>
