--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -58,7 +58,7 @@
                 </span>
               </summary>
               <div class="govuk-details__text">
-                Any abstraction licences or variations required must be in place to submit a full application.
+                Any abstraction licences or variations must be in place by 31 December 2021 (the end of the application window).
               </div>
             </details>
           </fieldset>
