--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -56,7 +56,7 @@
         </div>
         <br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-          Continue
+          Get your score 
         </button>
 
         {% if data['COMPLETED'] == true %}
