--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -102,7 +102,15 @@
 
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
 			  Continue
-		    </button>
+	   </button>
+       {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
+
         {% else %}
         <h1 class="govuk-heading-l"> Farmer's details</h1>
         <div class="govuk-form-group">
@@ -179,11 +187,16 @@
                     <input class="govuk-input govuk-!-width-one-quarter" id="farmer-postcode" name="farmer-postcode" type="farmer-postcode" spellcheck="false" aria-describedby="farmer-postcode-hint" autocomplete="farmer-postcode" value="{{ data['farmer-postcode'] }}">
                 </div>                
 
-
 		  <button class="govuk-button govuk-!-margin-top-6 govuk-!-margin-right-1" data-module="govuk-button">
 			  Continue
 		  </button>
-
+          {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
       </form>
     </div>
   </div>
