--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -64,7 +64,14 @@
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
-
+        {# <button>TEST</button> #}
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
       </form>
     </div>
   </div>
