--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -67,7 +67,7 @@
         {# <button>TEST</button> #}
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+            class="govuk-button govuk-!-margin-right-1 govuk" data-module="govuk-button"
           >
             Back to summary page
           </button>
