changed yes and no to Yes and No

--- a/app/views/current/views/water/tenancy.html
+++ b/app/views/current/views/water/tenancy.html
@@ -26,13 +26,13 @@
             <br><br>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy" name="tenancy" type="radio" value="yes" {{ checked("tenancy", "yes") }}>
+                <input class="govuk-radios__input" id="tenancy" name="tenancy" type="radio" value="Yes" {{ checked("tenancy", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-2" name="tenancy" type="radio" value="no" {{ checked("tenancy", "no") }}>
+                <input class="govuk-radios__input" id="tenancy-2" name="tenancy" type="radio" value="No" {{ checked("tenancy", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-2">
                   No
                 </label>
