--- a/app/views/current/views/water/tenancy-length.html
+++ b/app/views/current/views/water/tenancy-length.html
@@ -26,13 +26,13 @@
             <br><br>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="yes" {{ checked("tenancy-length", "yes") }}>
+                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="no" {{ checked("tenancy-length", "no") }}>
+                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="No" {{ checked("tenancy-length", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
                   No
                 </label>
