added data to email page

--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -48,11 +48,11 @@
       <p>Theme: Resource management</p>
       <p>Project type: Water management</p>
       <p>Grant application window: 1 September - 31 December 2021</p>
-      <p>Growing: Food industry</p>
-      <p>Legal status: Trust</p>
+      <p>Growing: {{data['farming-type']}}</p>
+      <p>Legal status: {{data['legal-status']}}</p>
       <p>Location: England</p>
-      <p>Land ownership: No</p>
-      <p>Tenancy agreement until 2026: No</p>
+      <p>Land ownership: {{data['project-start']}}</p>
+      <p>Tenancy agreement until 2026: {{data['tenancy-length']}}</p>
       <p class=" govuk-!-font-size-24 govuk-!-padding-top-2">Project items needed:</p>
       <p>Reservoir construction and infrastructure:</p>
       <ul>
