new changes for each page

--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -27,7 +27,7 @@
             <span id="project-items-hint" class="govuk-hint">
               The minimum grant you can apply for is £35,000 (40% of £87,500). The maximum grant is £1 million.
             </span>
-<h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
+          <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-1" name="project-items" type="checkbox" value="dam walls" {{ checked("project-items", "dam walls") }}>
@@ -90,7 +90,7 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-11" name="project-items" type="checkbox" value="pumphouse" value="irrigation pump and controls" {{ checked("project-items", "pumphouse") }}>
+                <input class="govuk-checkboxes__input" id="project-items-11" name="project-items" type="checkbox" value="pumphouse" value="Pumphouse" {{ checked("project-items", "Pumphouse") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-11">
                   Pumphouse
                 </label>
@@ -110,58 +110,58 @@
               </div>
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-14" name="project-items" type="checkbox" value="water meter" {{ checked("project-items", "water meter") }}>
+                <input class="govuk-checkboxes__input" id="project-items-14" name="project-items" type="checkbox" value="Water meter" {{ checked("project-items", "Water meter") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-14">
                   Water meter
                 </label>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Irrigation equipment</h2>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-15" name="project-items" type="checkbox" value="boom irrigators" {{ checked("project-items", "boom irrigators") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-15">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-1" name="Irrigation equipment" type="checkbox" value="Boom " {{ checked("Irrigation equipment", "Boom") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-1">
                   Boom 
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-16" name="project-items" type="checkbox" value="trickle irrigation equipment" {{ checked("project-items", "trickle irrigation equipment") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-16">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-2" name="Irrigation equipment" type="checkbox" value="Trickle" {{ checked("Irrigation equipment", "Trickle") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-2">
                   Trickle
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-17" name="project-items" type="checkbox" value="Ebb and flow" {{ checked("project-items", "Ebb and flow") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-17">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-3" name="Irrigation equipment" type="checkbox" value="Ebb and flow" {{ checked("Irrigation equipment", "Ebb and flow") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-3">
                   Ebb and flow
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-18" name="project-items" type="checkbox" value="Capillary bed" {{ checked("project-items", "Capillary bed") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-18">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-4" name="Irrigation equipment" type="checkbox" value="Capillary bed" {{ checked("Irrigation equipment", "Capillary bed") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-4">
                   Capillary bed
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-19" name="project-items" type="checkbox" value="Sprinklers" {{ checked("project-items", "Sprinklers") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-19">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-5" name="Irrigation equipment" type="checkbox" value="Sprinklers" {{ checked("Irrigation equipment", "Sprinklers") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-5">
                   Sprinklers
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-20" name="project-items" type="checkbox" value="Mist" {{ checked("project-items", "Mist") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-20">
+                <input class="govuk-checkboxes__input" id="Irrigation equipment-6" name="Irrigation equipment" type="checkbox" value="Mist" {{ checked("Irrigation equipment", "Mist") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-6">
                   Mist
                 </label>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Technology</h2>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-19" name="project-items" type="checkbox" value="computer software" {{ checked("project-items", "computer software") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-19">
+                <input class="govuk-checkboxes__input" id="Technology-1" name="Technology" type="checkbox" value="computer software" {{ checked("Technology", "computer software") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Technology-1">
                   Software to monitor soil moisture levels and schedule irrigation
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-20" name="project-items" type="checkbox" value="software and sensors" {{ checked("project-items", "software and sensors") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-20">
+                <input class="govuk-checkboxes__input" id="Technology-2" name="Technology" type="checkbox" value="software and sensors" {{ checked("Technology", "software and sensors") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="Technology-2">
                   Software and sensors to optimise water application
                 </label>
               </div>
