--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -26,13 +26,13 @@ Have you already started work on the project?
           <br><br>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="no" {{ checked("project-start", "no") }}>
+              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value=" No" {{ checked("project-start", " No") }}>
               <label class="govuk-label govuk-radios__label" for="project-start-2">
                 No
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="yes" {{ checked("project-start", "yes") }}>
+              <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="Yes" {{ checked("project-start", "Yes") }}>
               <label class="govuk-label govuk-radios__label" for="project-start">
                 Yes
               </label>
