--- a/app/views/current/views/water/water-SSSI.html
+++ b/app/views/current/views/water/water-SSSI.html
@@ -21,13 +21,13 @@
           <br><br>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="water-SSSI" name="water-SSSI" type="radio" value="yes" {{ checked("water-SSSI", "yes") }}>
+              <input class="govuk-radios__input" id="water-SSSI" name="water-SSSI" type="radio" value="Yes" {{ checked("water-SSSI", "Yes") }}>
               <label class="govuk-label govuk-radios__label" for="water-SSSI">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="water-SSSI-2" name="water-SSSI" type="radio" value="no" {{ checked("water-SSSI", "no") }}>
+              <input class="govuk-radios__input" id="water-SSSI-2" name="water-SSSI" type="radio" value="No" {{ checked("water-SSSI", "No") }}>
               <label class="govuk-label govuk-radios__label" for="water-SSSI-2">
                 No
               </label>
